--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,33 +61,71 @@ body{
       color: #444;
 }
 
-.row2{
-    margin-bottom: 20px;
-    text-align: center;
-}
-
 .counter{
-    width: 80px;
+    width: 60px;
     height: 40px;
     background-color: black;
     border-radius: 40px;
     font-family: Consolas;
     font-size: 25px;
-    color: rgba(255,0,0,0.5);
+    color: rgb(255,0,0);
     float: right;
-    margin-right: -15px;
     letter-spacing: 5px;
+}
 
+.off{
+color: rgba(255,0,0, 0.4);
 }
 
 .startBtn{
     width: 40px;
     height: 40px;
     border-radius: 100%;
-    background-color: green;
+    background-color: rgb(18, 161, 58);
     font-family: Consolas;
     font-size: 25px;
-    margin-left:15px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
+}
+
+.strictBtn{
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: rgb(225, 232, 6);
+    font-family: Consolas;
+    font-size: 25px;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset rgb(74, 79, 4) 0 -1px 9px, rgb(217, 212, 44) 0 2px 12px;
+    z-index: 1000;
+}
+
+.row3{
+    margin-bottom: 10px;
+}
+
+.row1{
+    position: absolute;
+    width:100%
+}
+
+.led{
+  margin: -15px 20px auto auto;
+  width: 10px;
+  height: 10px;
+  background-color: #ABFF00;
+  border-radius: 100%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
+}
+
+.led_off{
+    background-color: #444;
+}
+
+.text{
+    color: #444;
+    margin: 0 auto;
+    position: relative;
 }
 
 
@@ -128,4 +166,8 @@ body{
     background-color: blue;
     border-radius:0 0 100% 0;
     float:right;
+}
+
+.blinking{
+    opacity: 0.4;
 }
